tests/baselines/reference/moduleExportsAliasLoop1.errors.txt
x.js(1,9): error TS2339: Property 'fn1' does not exist on type 'typeof import("x")'.


==== x.js (1 errors) ====
    exports.fn1();
            ~~~
!!! error TS2339: Property 'fn1' does not exist on type 'typeof import("x")'.
    exports.fn2 = Math.min;
    